<resources>
    <string name="app_name">Firebase</string>
    <string name="forgot_password">¿Has olvidado la contraseña?</string>
    <string name="main_registro">¡Registrate!</string>
    <string name="main_password">Contraseña</string>
    <string name="main_username">Correo electronico</string>
    <string name="main_login">¡Iniciar sesión!</string>
    <string name="error_blank_password">¡La contraseña no puede estar vacia!</string>
    <string name="error_equals_password">¡las contraseñas no coinciden!</string>
    <string name="field_null">Revisa los campos, no pueden estar nullos</string>
    <string name="password_weak">La contraseña es muy debil, debes poner 6 caracteres</string>
    <string name="fail_register">No se ha podido registrar el usuario de forma correcta</string>
    <string name="error_change_username">No se ha podido actualizar el nombre del usuario</string>
    <string name="error_add_user_collection">No se ha podido registrar el nuevo usuario en la collection</string>
    <string name="email_in_use">El email ya se está utilizando en otra cuenta</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Perfil</string>
    <string name="action_search">Buscar</string>
    <string name="menu_home">Home</string>
    <string name="action_close">Cerrerar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile">Perfil de usuario</string>


    <string name="tittle_productos">Productos</string>
    <string name="tittle_cart">Carrito</string>
    <string name="eliminar">Eliminar</string>
    <string name="add_nuevo_producto">Añadir nuevo producto</string>
    <string name="pagar">PAGAR</string>

    <string name="total_cart">Total: %1$.2f €</string>
    <string name="clases_cart">Clases: %1$d</string>
    <string name="comprar_product">Comprar: %1$.2f €</string>
    <string name="cantidad_cart">En el carrito: %1$d veces</string>
    <string name="precio_cart">%1$.2f €</string>
    <string name="search">Búsqueda</string>
    <string name="like">Me gusta</string>


</resources>