<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_Vguide10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_Vguide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_Hguide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_olvidar_password"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toTopOf="@id/main_Hguide90"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_btn_registro"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/main_registro"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_baseline_person_add_alt_1_24"
        app:iconGravity="textStart"
        app:iconPadding="40dp"
        app:layout_constraintBottom_toTopOf="@id/main_olvidar_password"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10"
        app:strokeColor="@color/color_secondary"
        app:strokeWidth="2dp"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_btn_login"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/main_login"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_baseline_login_24"
        app:iconGravity="textStart"
        app:iconPadding="40dp"
        app:layout_constraintBottom_toTopOf="@id/main_btn_registro"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10"
        app:strokeColor="@color/color_secondary"
        app:strokeWidth="2dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/main_password"
        app:boxStrokeColor="@color/color_secondary"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="15dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintTextColor="@color/color_secondary"
        app:layout_constraintBottom_toTopOf="@id/main_btn_login"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_tie_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:text="123456" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/main_username"
        app:boxStrokeColor="@color/color_secondary"
        app:boxStrokeWidth="2dp"
        app:cornerRadius="15dp"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/color_secondary"
        app:layout_constraintBottom_toTopOf="@id/main_til_password"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_tie_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:text="alortegama@gmail.com" />
    </com.google.android.material.textfield.TextInputLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/main_profile_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:src="@mipmap/ic_codigonline"
        app:civ_border_color="@color/color_secondary"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@id/main_til_email"
        app:layout_constraintEnd_toStartOf="@id/main_Vguide90"
        app:layout_constraintStart_toEndOf="@id/main_Vguide10"
        app:layout_constraintTop_toTopOf="parent"

        />

    <include
        android:id="@+id/progress_layout"
        layout="@layout/my_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.constraintlayout.widget.ConstraintLayout>